feat: add and import keyboard.js

--- a/style.css
+++ b/style.css
@@ -1,5 +1,43 @@
+.body {
+    background-color: rgb(234, 234, 243);
+}
+
 .wrapper {
-    width: 100px;
-    height: 100px;
-    background: red;
+    width: 750px;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.input-screen {
+    width: 750px;
+    height: 200px;
+    margin: 0 0 20px 0;
+}
+
+.keyboard {
+    width: 100%;
+    height: max-content;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgb(70, 70, 207);
+}
+.keyboard__row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+}
+
+.button {
+    width: 45px;
+    height: 45px;
+    border-radius: 3px;
+    background-color: rgb(177, 177, 207);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(70, 70, 207);;
 }
